--- a/index.html
+++ b/index.html
@@ -148,8 +148,9 @@ body {
 <!-- Ready Screen -->
 <div class="ready-screen">
     <p>🎉 Ready to enter the House of Candies?</p>
-    <a href="cndy.html">Enter Now</a>
+    <a href="home.html">Enter Now</a>
 </div>
 
 </body>
 </html>
+
